# SkillFather

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: README_CN.md
examples/: sample_claude_command.md  sample_codex_skill.md  sample_coze_skill.json  sample_hermes_skill.md  sample_skill.md
src/skillfather/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  installer.py  llm_client.py  parser.py  reporter.py  yaml_utils.py
src/skillfather/data/: __init__.py
src/skillfit/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  parser.py  reporter.py
templates/: report.html
tests/: test_analyzer.py  test_cli.py  test_coze.py  test_installer.py  test_parser.py  test_yaml_utils.py
