[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillfather"
version = "0.2.1"
description = "Multi-Platform Agent Skill 适配度分析工具 - 支持 WorkBuddy/Codex/Claude Code/Coze/CodeBuddy/Hermes Agent（仅适用性评审，不涉及安全性审计）"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "alpsmonkey"},
]
keywords = ["workbuddy", "codebuddy", "codex", "claude-code", "coze", "hermes", "skill", "analyzer", "fitness", "assessment", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
skillfather = "skillfather.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skillfather = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
